# api-tester

./: .gitignore  README.md  components.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.cjs.backup  vite.config.ts
.zed/: debug.json  settings.json  tasks.json
src/: App.vue  index.css  main.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2024-01-26-210035_create_sessions/: up.sql
src-tauri/migrations/2024-02-21-165756_create_requesttabs/: down.sql  up.sql
src-tauri/migrations/2024-02-21-165811_create_requesttabs_sessions/: up.sql
src-tauri/migrations/2024-03-01-183641_create_config/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs  util.rs
src-tauri/src/session_management/: mod.rs
src/components/: DarkModeToggle.vue  HeadersTable.vue  ParameterTable.vue  ResponseContainer.vue  SideBar.vue  TabRow.vue
src/composables/: useDarkMode.ts
src/models/: models.ts
src/store/: requestStore.ts
test/: docker-compose.yml
