[package]
name = "fantastic-lamp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
http-serde = "2.1.1"
chrono = { version = "0.4", features = ["serde"] }
serde_nested_with = "0.2.5"
tauri-plugin-shell = "2.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
